Small Leaderboard Fix

--- a/webapp/static/leaderboard.html
+++ b/webapp/static/leaderboard.html
@@ -23,7 +23,7 @@
             <thead>
                 <tr>
                     <th>Joueur</th>
-                    <th>Meilleur Score</th>
+                    <th>Score</th>
                     <th>Essais Moyens</th>
                 </tr>
             </thead>
