--- a/webapp/static/leaderboard.html
+++ b/webapp/static/leaderboard.html
@@ -33,7 +33,7 @@
         </table>
     </div>
     <footer>
-        <p>&copy; 2024 Nicolas Lamarque, ING3 IA Groupe 1 - Créateur de (MOTUS + NICO) MNOITCUOS</p>
+        <p>&copy; 2024 Nicolas Lamarque & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
     </footer>
     <script src="js/leaderboard.js"></script>
 </body>
