--- a/webapp/static/mnoitcuos.html
+++ b/webapp/static/mnoitcuos.html
@@ -30,7 +30,7 @@
     </br>
   </div>
   <footer>
-    <p>&copy; 2024 Nicolas Lamarque, ING3 IA Groupe 1 - Créateur de (MOTUS + NICO) MNOITCUOS</p>
+    <p>&copy; 2024 Nicolas Lamarque & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
   </footer>
   <script src="js/mnoitcuos.js"></script>
 </body>
