--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -33,7 +33,7 @@
     <button id="startGameButton" onclick="window.location.href='mnoitcuos.html';">J'ai compris !</button>
   </div>
   <footer>
-    <p>&copy; 2024 Nicolas Lamarque, ING3 IA Groupe 1 - Créateur de (MOTUS + NICO) MNOITCUOS</p>
+    <p>&copy; 2024 Nicolas Lamarque & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
   </footer>
   <script src="js/index.js"></script>
 </body>
