--- a/authentication/static/index.html
+++ b/authentication/static/index.html
@@ -28,7 +28,7 @@
   <div id="reponse"></div>
 
   <footer>
-    <p>&copy; 2024 Nicolas Lamarque & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
+    <p>&copy; 2024 Nicolas LAMARQUE & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
   </footer>
   <script src="js/index.js"></script>
 </body>
