--- a/authentication/static/register.html
+++ b/authentication/static/register.html
@@ -30,7 +30,7 @@
   <div id="noAcc">Vous avez déjà un compte ? <a href="index.html">Connectez-vous ici</a></div>
   <div id="reponse"></div>
   <footer>
-    <p>&copy; 2024 Nicolas Lamarque & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
+    <p>&copy; 2024 Nicolas LAMARQUE & Zine Eddine LAARFI, ING3 IA Groupe 1 - MNOITCUOS</p>
   </footer>
 
   <script src="js/register.js"></script>
